--- a/nose2.cfg
+++ b/nose2.cfg
@@ -18,7 +18,7 @@ always-on = False
 clear-handlers = False
 log-level = NOTSET
 [coverage]
-always-on = True
+always-on = False
 coverage = energy_models
 coverage-report = xml
 coverage-config = .coveragerc
