Ignore ini extension in header config + headers (auto) correction

--- a/headers_ignore_config.json
+++ b/headers_ignore_config.json
@@ -16,7 +16,8 @@
         "txt",
         "ipynb",
         "zip",
-        "rst"
+        "rst",
+        "ini"
     ],
     "files_to_ignore": [
         "default_process_rights.yaml"
