--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-python_files = l0_test_header.py
+python_files = l0*.py
 testpaths = 
   energy_models/tests
 ;addopts = --numprocesses=auto
