--- a/.coveragerc
+++ b/.coveragerc
@@ -1,12 +1,7 @@
 [run]
+relative_files = True
 branch = True
 omit = 
     */tests/*
     */__init__.py
 	docs/
-
-[report]
-show_missing = True
-exclude_lines =
-    raise NotImplementedError
-    if __name__ == .__main__.:
