--- a/headers_ignore_config.json
+++ b/headers_ignore_config.json
@@ -17,7 +17,8 @@
         "ipynb",
         "zip",
         "rst",
-        "ini"
+        "ini",
+        "coveragerc"
     ],
     "files_to_ignore": [
         "default_process_rights.yaml"
