Ignore toml file for headers check

--- a/headers_ignore_config.json
+++ b/headers_ignore_config.json
@@ -20,7 +20,8 @@
         "ini",
         "coveragerc",
         "yaml",
-        "bat"
+        "bat",
+        "toml"
     ],
     "files_to_ignore": [
         ".readthedocs",
