Opened pytest versions

--- a/requirements.in
+++ b/requirements.in
@@ -11,7 +11,7 @@ plotly==5.3.0
 scipy==1.10.1
 
 # Development requirements
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-xdist==3.4.0
-pytest-durations==1.2.0
+pytest>=7.4.3
+pytest-cov>=4.1.0
+pytest-xdist>=3.4.0
+pytest-durations>=1.2.0
