add sankey plots to energy mix and stream disciplines

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
 repos:
+  - repo: https://github.com/b4pm-devops/sostrades-pre-commit.git
+    rev: v1.1.2
+    hooks:
+    - id: update-headers
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.5.0
     hooks:
