--- a/requirements.in
+++ b/requirements.in
@@ -5,10 +5,10 @@
 
 # External libraries
 matplotlib>=3.4.3
-numpy==1.24.4
-pandas==2.2.2
+numpy>=1.24.4
+pandas>=2.2.2
 plotly>=5.3.0
-scipy==1.13.1
+scipy>=1.13.1
 
 # Development requirements
 pytest>=7.4.3
